# robot-cleaner

./: .gitignore  .localenv  Dockerfile  README.md  deploy.yml  test.yml
.github/workflows/: lint.yml
src/: alembic.ini  api.yaml  entrypoint.sh  pyproject.toml  uwsgi.ini
src/migrations/: env.py
src/migrations/versions/: 8f958f64a426_01_add_executions_table.py
src/robot_cleaner/: __main__.py  app.py  auth.py  config.py  db.py  exceptions.py  routes.py
src/robot_cleaner/api/: clean.py
src/robot_cleaner/models/: __init__.py  execution.py
src/tests/: conftest.py  test_auth.py  test_db.py
src/tests/test_api/: test_clean.py
